grammar.js
    document: ($) => repeat($.top_level_item),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      seq(
        "/*",
        repeat(
          choice(
            /[^/*]+/,
            /\/[^*]/,
            /\*[^/]/,
            $.block_comment,
          ),
        ),
        "*/",
      ),

    attribute_list: ($) => repeat1($.attribute),

    attribute: ($) =>
      seq(
        "@",
        field("name", $.lower_identifier),
        optional(field("arguments", $.attribute_arguments)),
      ),

    attribute_arguments: ($) =>
      seq("(", optional(commaSep1($.attribute_argument)), optional(","), ")"),

    attribute_argument: ($) =>
      choice(
        $.keyword_attribute_argument,
        $.expression,
      ),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", choice($.lower_identifier, $.upper_identifier)),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("capabilities", $.capability_list)),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    struct_field_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        field("name", $.lower_identifier),
        ":",
        field("type", $.slot_type),
        optional(seq("=", field("value", $.expression))),
      ),

    binding_statement: ($) =>
      seq(
        "let",
        field("pattern", $.binding_pattern),
        optional(seq(":", field("type", $.slot_type))),
        "=",
        field("value", $.expression),
      ),

    parameter_clause: ($) =>
      seq(
        "(",
        optional($.parameter_list),
        optional($.keyword_parameter_section),
        ")",
      ),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.slot_type)),

    return_type: ($) => seq("->", $.type_expression),

    type_parameter_list: ($) =>
      seq("[", optional(commaSep1($.type_parameter)), optional(","), "]"),

    type_parameter: ($) => $.upper_identifier,

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.unit_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    wildcard_pattern: ($) => "_",

    literal_pattern: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
      ),

    tuple_pattern: ($) => seq("(", commaSep1($.pattern), optional(","), ")"),

    struct_pattern: ($) =>
      seq("{", optional(commaSep1($.struct_pattern_field)), optional(","), "}"),

    struct_pattern_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("pattern", $.pattern)),
        field("name", $.lower_identifier),
        prec(20, ".."),
      ),

    variant_pattern: ($) =>
      prec.right(
        seq(
          field("name", choice($.type_path, $.upper_identifier)),
          optional($.struct_pattern),
        ),
      ),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.path_literal,
        $.interpolated_path_literal,
        $.array_expression,
        $.record_expression,
        $.map_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.method_adapter_expression,
        $.pipe_placeholder,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    tuple_expression: ($) =>
      seq("(", commaSep1(choice($.expression, $.spread_expression)), optional(","), ")"),

    block: ($) => seq("{", optional($.statement_list), "}"),

    index_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $._postfix_target), $._immediate_l_bracket, field("index", $.expression), "]"),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("value", $._postfix_target),
          $._immediate_dot,
          field("field", choice($.lower_identifier, $.upper_identifier, $.tuple_index)),
        ),
      ),

    _postfix_target: ($) =>
      choice(
        $.primary_expression,
        $.field_expression,
        $.index_expression,
        $.invocation_expression,
        $.fallible_expression,
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.expression),
          field("consequence", $.block),
          field("alternative", $.else_clause),
        ),
      ),

    else_clause: ($) => seq("else", choice($.if_expression, $.block)),

    match_expression: ($) =>
      seq("match", field("value", $.expression), "{", optional(commaSep1($.match_arm)), optional(","), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("value", $.expression),
      ),

    comparison_expression: ($) =>
      prec.left(PREC.comparison, seq($.expression, choice("<", "<=", ">", ">="), $.expression)),

    additive_expression: ($) =>
      prec.left(PREC.additive, seq($.expression, choice("+", "-"), $.expression)),

    multiplicative_expression: ($) =>
      prec.left(PREC.multiplicative, seq($.expression, choice("*", "/", "%"), $.expression)),

    is_expression: ($) =>
      prec.left(PREC.type_ops, seq($.expression, "is", $.pattern)),

    closure_parameter_clause: ($) =>
      seq("(", optional(commaSep1($.binding_pattern)), optional(","), ")"),

    arrow_closure: ($) =>
      prec.right(seq(field("parameters", $.closure_parameter_clause), "=>", field("body", $.expression))),

    dollar_identifier: ($) => /\$[0-9]*/,

    _immediate_l_bracket: ($) => token.immediate("["),

    _immediate_dot: ($) => token.immediate("."),

    lower_identifier: ($) => /(?:[a-z][A-Za-z0-9_]*|_[A-Za-z0-9_]+)/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
