test/corpus/comments.txt
================================================================================
Line comment before code
================================================================================

x = 1;
// this is a comment
y = 2

--------------------------------------------------------------------------------

(document
  (statement_list
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal)))
    (line_comment)
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal)))))

================================================================================
Block comment between tokens
================================================================================

x = /* value */ 42

--------------------------------------------------------------------------------

(document
  (statement_list
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (block_comment)
      (primary_expression
        (integer_literal)))))

================================================================================
Nested block comment
================================================================================

x = 1;
/* outer /* inner */ still outer */
y = 2

--------------------------------------------------------------------------------

(document
  (statement_list
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal)))
    (block_comment
      (block_comment))
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal)))))

================================================================================
Line comment at end of line
================================================================================

x = 42 // the answer

--------------------------------------------------------------------------------

(document
  (statement_list
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal))))
  (line_comment))

================================================================================
Multiple line comments
================================================================================

// first comment
// second comment
x = 1

--------------------------------------------------------------------------------

(document
  (line_comment)
  (line_comment)
  (statement_list
    (binding_statement
      (binding_pattern
        (lower_identifier))
      (primary_expression
        (integer_literal)))))
